--- a/app/src/main/res/layout/item_list_dogs.xml
+++ b/app/src/main/res/layout/item_list_dogs.xml
@@ -5,6 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        app:layout_constraintEnd_toEndOf="@+id/ivDog"
+        app:layout_constraintStart_toStartOf="@+id/ivDog"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/ivDog"
         android:layout_width="wrap_content"
@@ -12,6 +22,7 @@
         android:layout_marginTop="5dp"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -50,5 +61,6 @@
         app:layout_constraintBottom_toBottomOf="@+id/starIcon"
         app:layout_constraintStart_toEndOf="@+id/starIcon"
         app:layout_constraintTop_toTopOf="@+id/starIcon" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
