Correcciones realizadas de la revisión de Add dogs list page #4

--- a/app/src/main/res/layout/item_list_dogs.xml
+++ b/app/src/main/res/layout/item_list_dogs.xml
@@ -16,9 +16,9 @@
 
     <ImageView
         android:id="@+id/ivDog"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="4dp"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
         app:layout_constraintDimensionRatio="1:1"
@@ -42,7 +42,7 @@
 
     <View
         android:id="@+id/divider"
-        android:layout_width="409dp"
+        android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="16dp"
         android:background="?android:attr/listDivider"
@@ -51,10 +51,10 @@
         app:layout_constraintTop_toBottomOf="@+id/starIcon" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/label_add_fav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="16dp"
         android:text="@string/add_fav"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/starIcon"
