--- a/app/src/main/res/layout/item_list_dogs.xml
+++ b/app/src/main/res/layout/item_list_dogs.xml
@@ -17,11 +17,11 @@
     <ImageView
         android:id="@+id/ivDog"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="4dp"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
-        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
